--- a/index.html
+++ b/index.html
@@ -4,63 +4,86 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>WebStudio - Main page</title>
+    <!------------fonts ----------------->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!--------------custom styles --------------->
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" class="header-logo">WebStudio</a>
+        <ul class="header-list">
+          <li class="header-list-item">
+            <a href="" class="header-list-link">Studio</a>
+          </li>
+          <li class="header-list-item">
+            <a href="" class="header-list-link">Portfolio</a>
+          </li>
+          <li class="header-list-item">
+            <a href="" class="header-list-link">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-address">
+        <ul class="header-address-list">
+          <li class="header-address-item">
+            <a href="mailto:info@devstudio.com" class="header-address-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-address-item">
+            <a href="tel:+110001111111" class="header-address-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <!--hero section-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-btn">Order Service</button>
       </section>
       <!--/hero section-->
       <!--2 section-->
-      <section>
+      <section class="philosophy">
         <h2 hidden>Our philosophy</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="philosophy-list">
+          <li class="philosophy-list-item">
+            <h3 class="philosophy-item-title">Strategy</h3>
+            <p class="philosophy-item-desc">
               Our goal is to identify the business <br />
               problem to walk away with the <br />
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="philosophy-list-item">
+            <h3 class="philosophy-item-title">Punctuality</h3>
+            <p class="philosophy-item-desc">
               Bring the key message to the <br />
               brand's audience for the best price <br />
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="philosophy-list-item">
+            <h3 class="philosophy-item-title">Diligence</h3>
+            <p class="philosophy-item-desc">
               Research and confirm brands that <br />
               present the strongest digital growth <br />
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="philosophy-list-item">
+            <h3 class="philosophy-item-title">Technologies</h3>
+            <p class="philosophy-item-desc">
               Design practice focused on digital <br />
               experiences. We bring forth a deep <br />
               passion for problem-solving.
@@ -70,10 +93,10 @@
       </section>
       <!--/2 section-->
       <!--what are we doing section-->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="what">
+        <h2 class="what-title">What are we doing</h2>
+        <ul class="what-list">
+          <li class="what-list-item">
             <img
               src="./images/what1.jpg"
               alt="what are we doing"
@@ -81,7 +104,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="what-list-item">
             <img
               src="./images/what2.jpg"
               alt="what are we doing"
@@ -89,7 +112,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="what-list-item">
             <img
               src="./images/what3.jpg"
               alt="what are we doing"
@@ -101,57 +124,57 @@
       </section>
       <!--/what are we doing section-->
       <!--our team-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-list-item">
             <img
               src="./images/ourteam1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-item-title">Mark Guerrero</h3>
+            <p class="team-item-desc">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/ourteam2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-item-title">Tom Ford</h3>
+            <p class="team-item-desc">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/ourteam3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-item-title">Camila Garcia</h3>
+            <p class="team-item-desc">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/ourteam4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-item-title">Daniel Wilson</h3>
+            <p class="team-item-desc">UI Designer</p>
           </li>
         </ul>
       </section>
       <!--/our team-->
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo">WebStudio</a>
+      <p class="footer-desc">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
