--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="header-logo">WebStudio</a>
-        <ul class="header-list">
+        <a href="./index.html" class="header-logo">
+          <span class="header-logo-span">Web</span>Studio</a
+        >
+        <ul class="header-list list">
           <li class="header-list-item">
-            <a href="" class="header-list-link">Studio</a>
+            <a href="./index.html" class="header-list-link">Studio</a>
           </li>
           <li class="header-list-item">
-            <a href="" class="header-list-link">Portfolio</a>
+            <a href="./portfolio.html" class="header-list-link">Portfolio</a>
           </li>
           <li class="header-list-item">
             <a href="" class="header-list-link">Contacts</a>
@@ -32,7 +34,7 @@
         </ul>
       </nav>
       <address class="header-address">
-        <ul class="header-address-list">
+        <ul class="header-address-list list">
           <li class="header-address-item">
             <a href="mailto:info@devstudio.com" class="header-address-link"
               >info@devstudio.com</a
@@ -56,7 +58,7 @@
       <!--2 section-->
       <section class="philosophy">
         <h2 hidden>Our philosophy</h2>
-        <ul class="philosophy-list">
+        <ul class="philosophy-list list">
           <li class="philosophy-list-item">
             <h3 class="philosophy-item-title">Strategy</h3>
             <p class="philosophy-item-desc">
@@ -95,7 +97,7 @@
       <!--what are we doing section-->
       <section class="what">
         <h2 class="what-title">What are we doing</h2>
-        <ul class="what-list">
+        <ul class="what-list list">
           <li class="what-list-item">
             <img
               src="./images/what1.jpg"
@@ -126,7 +128,7 @@
       <!--our team-->
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-list-item">
             <img
               src="./images/ourteam1.jpg"
@@ -173,7 +175,9 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">WebStudio</a>
+      <a href="./index.html" class="footer-logo">
+        <span class="footer-logo-span">Web</span>Studio</a
+      >
       <p class="footer-desc">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
