--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,12 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="header-logo">WebStudio</a>
-        <ul class="header-list">
+        <a href="./index.html" class="header-logo">
+          <span class="header-logo-span">Web</span>Studio</a
+        >
+        <ul class="header-list list">
           <li class="header-list-item">
-            <a href="" class="header-list-link">Studio</a>
+            <a href="./index.html" class="header-list-link">Studio</a>
           </li>
           <li class="header-list-item">
             <a href="" class="header-list-link">Portfolio</a>
@@ -32,7 +34,7 @@
         </ul>
       </nav>
       <address class="header-address">
-        <ul class="header-address-list">
+        <ul class="header-address-list list">
           <li class="header-address-item">
             <a href="mailto:info@devstudio.com" class="header-address-link"
               >info@devstudio.com</a
@@ -50,7 +52,7 @@
       <!-- section portflio -->
       <section class="portfolio">
         <h1 hidden>Portfolio</h1>
-        <ul class="portfolio-list">
+        <ul class="portfolio-list list">
           <li class="portfolio-list-item">
             <button class="portfolio-list-btn" type="button">All</button>
           </li>
@@ -67,7 +69,7 @@
             <button class="portfolio-list-btn" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="portfolio-cards">
+        <ul class="portfolio-cards list">
           <li class="portfolio-cards-item">
             <img
               src="./images/img (4) (1).jpg"
@@ -171,7 +173,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">WebStudio</a>
+      <a href="./index.html" class="footer-logo">
+        <span class="footer-logo-span">Web</span>Studio</a
+      >
       <p class="footer-desc">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
