--- a/portfolio.html
+++ b/portfolio.html
@@ -69,103 +69,121 @@
             <button class="portfolio-list-btn" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="portfolio-cards list">
-          <li class="portfolio-cards-item">
-            <img
-              src="./images/img (4) (1).jpg"
-              alt="options"
-              class="portfolio-cards-img"
-              width="360"
-              height="300"
-            />
+        <ul class="portfolio-link list">
+          <li class="portfolio-link-item">
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/img (4) (1).jpg"
+                alt="options"
+                class="portfolio-cards-img"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="portfolio-cards-title">Banking App Interface Concept</h2>
             <p class="portfolio-cards-desc">App</p>
           </li>
-          <li class="portfolio-cards-item">
-            <img
-              src="./images/img (5) (1).jpg"
-              alt="options"
-              class="portfolio-cards-img"
-              width="360"
-              height="300"
-            />
+          <li class="portfolio-link-item">
+            <a href="#" class="portfolio-card"
+              ><img
+                src="./images/img (5) (1).jpg"
+                alt="options"
+                class="portfolio-cards-img"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="portfolio-cards-title">Cashless Payment</h2>
             <p class="portfolio-cards-desc">Marketing</p>
           </li>
-          <li class="portfolio-cards-item">
-            <img
-              src="./images/img (6) (1).jpg"
-              alt="options"
-              class="portfolio-cards-img"
-              width="360"
-              height="300"
-            />
+          <li class="portfolio-link-item">
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/img (6) (1).jpg"
+                alt="options"
+                class="portfolio-cards-img"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="portfolio-cards-title">Meditaion App</h2>
             <p class="portfolio-cards-desc">App</p>
           </li>
-          <li class="portfolio-cards-item">
-            <img
-              src="./images/img (7) (1).jpg"
-              alt="options"
-              class="portfolio-cards-img"
-              width="360"
-              height="300"
-            />
+          <li class="portfolio-link-item">
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/img (7) (1).jpg"
+                alt="options"
+                class="portfolio-cards-img"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="portfolio-cards-title">Taxi Service</h2>
             <p class="portfolio-cards-desc">Marketing</p>
           </li>
-          <li class="portfolio-cards-item">
-            <img
-              src="./images/img (8) (1).jpg"
-              alt="options"
-              class="portfolio-cards-img"
-              width="360"
-              height="300"
-            />
+          <li class="portfolio-link-item">
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/img (8) (1).jpg"
+                alt="options"
+                class="portfolio-cards-img"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="portfolio-cards-title">Screen Illustrations</h2>
             <p class="portfolio-cards-desc">Design</p>
           </li>
-          <li class="portfolio-cards-item">
-            <img
-              src="./images/img (9) (1).jpg"
-              alt="options"
-              class="portfolio-cards-img"
-              width="360"
-              height="300"
-            />
+          <li class="portfolio-link-item">
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/img (9) (1).jpg"
+                alt="options"
+                class="portfolio-cards-img"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="portfolio-cards-title">Online Courses</h2>
             <p class="portfolio-cards-desc">Marketing</p>
           </li>
-          <li class="portfolio-cards-item">
-            <img
-              src="./images/img (10) (1).jpg"
-              alt="options"
-              class="portfolio-cards-img"
-              width="360"
-              height="300"
-            />
+          <li class="portfolio-link-item">
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/img (10) (1).jpg"
+                alt="options"
+                class="portfolio-cards-img"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="portfolio-cards-title">Instagram Stories Concept</h2>
             <p class="portfolio-cards-desc">Design</p>
           </li>
-          <li class="portfolio-cards-item">
-            <img
-              src="./images/img (11) (1).jpg"
-              alt="options"
-              class="portfolio-cards-img"
-              width="360"
-              height="300"
-            />
+          <li class="portfolio-link-item">
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/img (11) (1).jpg"
+                alt="options"
+                class="portfolio-cards-img"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="portfolio-cards-title">Organic Food</h2>
             <p class="portfolio-cards-desc">Web Site</p>
           </li>
-          <li class="portfolio-cards-item">
-            <img
-              src="./images/img (12) (1).jpg"
-              alt="options"
-              class="portfolio-cards-img"
-              width="360"
-              height="300"
-            />
+          <li class="portfolio-link-item">
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/img (12) (1).jpg"
+                alt="options"
+                class="portfolio-cards-img"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="portfolio-cards-title">Fresh Coffee</h2>
             <p class="portfolio-cards-desc">Web Site</p>
           </li>
