--- a/portfolio.html
+++ b/portfolio.html
@@ -79,9 +79,12 @@
                 width="360"
                 height="300"
               />
+
+              <h2 class="portfolio-cards-title">
+                Banking App Interface Concept
+              </h2>
+              <p class="portfolio-cards-desc">App</p>
             </a>
-            <h2 class="portfolio-cards-title">Banking App Interface Concept</h2>
-            <p class="portfolio-cards-desc">App</p>
           </li>
           <li class="portfolio-link-item">
             <a href="#" class="portfolio-card"
@@ -92,9 +95,10 @@
                 width="360"
                 height="300"
               />
+
+              <h2 class="portfolio-cards-title">Cashless Payment</h2>
+              <p class="portfolio-cards-desc">Marketing</p>
             </a>
-            <h2 class="portfolio-cards-title">Cashless Payment</h2>
-            <p class="portfolio-cards-desc">Marketing</p>
           </li>
           <li class="portfolio-link-item">
             <a href="#" class="portfolio-card">
@@ -105,9 +109,10 @@
                 width="360"
                 height="300"
               />
+
+              <h2 class="portfolio-cards-title">Meditaion App</h2>
+              <p class="portfolio-cards-desc">App</p>
             </a>
-            <h2 class="portfolio-cards-title">Meditaion App</h2>
-            <p class="portfolio-cards-desc">App</p>
           </li>
           <li class="portfolio-link-item">
             <a href="#" class="portfolio-card">
@@ -118,9 +123,10 @@
                 width="360"
                 height="300"
               />
+
+              <h2 class="portfolio-cards-title">Taxi Service</h2>
+              <p class="portfolio-cards-desc">Marketing</p>
             </a>
-            <h2 class="portfolio-cards-title">Taxi Service</h2>
-            <p class="portfolio-cards-desc">Marketing</p>
           </li>
           <li class="portfolio-link-item">
             <a href="#" class="portfolio-card">
@@ -131,9 +137,10 @@
                 width="360"
                 height="300"
               />
+
+              <h2 class="portfolio-cards-title">Screen Illustrations</h2>
+              <p class="portfolio-cards-desc">Design</p>
             </a>
-            <h2 class="portfolio-cards-title">Screen Illustrations</h2>
-            <p class="portfolio-cards-desc">Design</p>
           </li>
           <li class="portfolio-link-item">
             <a href="#" class="portfolio-card">
@@ -144,9 +151,10 @@
                 width="360"
                 height="300"
               />
+
+              <h2 class="portfolio-cards-title">Online Courses</h2>
+              <p class="portfolio-cards-desc">Marketing</p>
             </a>
-            <h2 class="portfolio-cards-title">Online Courses</h2>
-            <p class="portfolio-cards-desc">Marketing</p>
           </li>
           <li class="portfolio-link-item">
             <a href="#" class="portfolio-card">
@@ -157,9 +165,10 @@
                 width="360"
                 height="300"
               />
+
+              <h2 class="portfolio-cards-title">Instagram Stories Concept</h2>
+              <p class="portfolio-cards-desc">Design</p>
             </a>
-            <h2 class="portfolio-cards-title">Instagram Stories Concept</h2>
-            <p class="portfolio-cards-desc">Design</p>
           </li>
           <li class="portfolio-link-item">
             <a href="#" class="portfolio-card">
@@ -170,9 +179,10 @@
                 width="360"
                 height="300"
               />
+
+              <h2 class="portfolio-cards-title">Organic Food</h2>
+              <p class="portfolio-cards-desc">Web Site</p>
             </a>
-            <h2 class="portfolio-cards-title">Organic Food</h2>
-            <p class="portfolio-cards-desc">Web Site</p>
           </li>
           <li class="portfolio-link-item">
             <a href="#" class="portfolio-card">
@@ -183,9 +193,10 @@
                 width="360"
                 height="300"
               />
+
+              <h2 class="portfolio-cards-title">Fresh Coffee</h2>
+              <p class="portfolio-cards-desc">Web Site</p>
             </a>
-            <h2 class="portfolio-cards-title">Fresh Coffee</h2>
-            <p class="portfolio-cards-desc">Web Site</p>
           </li>
         </ul>
       </section>
